--- a/opentrend/requirements.txt
+++ b/opentrend/requirements.txt
@@ -1,29 +1,97 @@
-# OpenTrend - Fashion Trend Forecasting System
-# Requirements
+# OpenTrend - Global Fashion Brain
+# Complete requirements for the fashion AI system
 
-# Core
-numpy>=1.21.0
-pandas>=1.3.0
-scipy>=1.7.0
+# =============================================================================
+# CORE DATA SCIENCE
+# =============================================================================
+numpy>=1.24.0
+pandas>=2.0.0
+scipy>=1.11.0
+scikit-learn>=1.3.0
 
-# Computer Vision
-torch>=1.10.0
-torchvision>=0.11.0
+# =============================================================================
+# DEEP LEARNING
+# =============================================================================
+torch>=2.0.0
+torchvision>=0.15.0
+
+# Transformers for CLIP
+transformers>=4.35.0
+
+# YOLO for garment detection
 ultralytics>=8.0.0
-Pillow>=8.0.0
 
-# Data Ingestion
-pytrends>=4.9.0
-
-# Machine Learning
-scikit-learn>=0.24.0
-
-# Forecasting
+# =============================================================================
+# TIME-SERIES FORECASTING
+# =============================================================================
 prophet>=1.1.0
 
-# API (optional)
-fastapi>=0.68.0
-uvicorn>=0.15.0
+# =============================================================================
+# WEB SCRAPING & APIs
+# =============================================================================
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
 
-# Visualization
-matplotlib>=3.4.0
+# Reddit API
+praw>=7.7.0
+
+# RSS/Feed parsing
+feedparser>=6.0.0
+
+# Browser automation (for dynamic sites)
+selenium>=4.15.0
+webdriver-manager>=4.0.0
+
+# Rate limiting
+ratelimit>=2.2.0
+
+# =============================================================================
+# IMAGE PROCESSING
+# =============================================================================
+Pillow>=10.0.0
+opencv-python>=4.8.0
+
+# =============================================================================
+# DATABASE
+# =============================================================================
+# SQLite is built-in, but we add async support
+aiosqlite>=0.19.0
+
+# =============================================================================
+# VISUALIZATION
+# =============================================================================
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.18.0
+
+# =============================================================================
+# API SERVER (Optional - for serving predictions)
+# =============================================================================
+fastapi>=0.104.0
+uvicorn>=0.24.0
+
+# =============================================================================
+# UTILITIES
+# =============================================================================
+tqdm>=4.66.0
+python-dotenv>=1.0.0
+pyyaml>=6.0.0
+
+# Logging
+loguru>=0.7.0
+
+# =============================================================================
+# GOOGLE TRENDS
+# =============================================================================
+pytrends>=4.9.0
+urllib3<2  # Compatibility fix for pytrends
+
+# =============================================================================
+# DEVELOPMENT & TESTING (Optional)
+# =============================================================================
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+black>=23.0.0
+isort>=5.12.0
+mypy>=1.6.0
