--- a/opentrend/requirements.txt
+++ b/opentrend/requirements.txt
@@ -1,5 +1,5 @@
 # OpenTrend - Global Fashion Brain
-# Complete requirements for the fashion AI system
+# Production-Grade Requirements
 
 # =============================================================================
 # CORE DATA SCIENCE
@@ -10,12 +10,12 @@ scipy>=1.11.0
 scikit-learn>=1.3.0
 
 # =============================================================================
-# DEEP LEARNING
+# DEEP LEARNING (PyTorch)
 # =============================================================================
 torch>=2.0.0
 torchvision>=0.15.0
 
-# Transformers for CLIP
+# Transformers (CLIP Model)
 transformers>=4.35.0
 
 # YOLO for garment detection
@@ -27,7 +27,17 @@ ultralytics>=8.0.0
 prophet>=1.1.0
 
 # =============================================================================
-# WEB SCRAPING & APIs
+# DATABASE (SQLAlchemy ORM)
+# =============================================================================
+sqlalchemy>=2.0.0
+alembic>=1.12.0  # Database migrations
+
+# Async support (optional for PostgreSQL)
+aiosqlite>=0.19.0
+asyncpg>=0.28.0  # PostgreSQL async driver
+
+# =============================================================================
+# WEB SCRAPING & APIS
 # =============================================================================
 requests>=2.31.0
 beautifulsoup4>=4.12.0
@@ -43,9 +53,6 @@ feedparser>=6.0.0
 selenium>=4.15.0
 webdriver-manager>=4.0.0
 
-# Rate limiting
-ratelimit>=2.2.0
-
 # =============================================================================
 # IMAGE PROCESSING
 # =============================================================================
@@ -53,10 +60,10 @@ Pillow>=10.0.0
 opencv-python>=4.8.0
 
 # =============================================================================
-# DATABASE
+# SCHEDULING & TASK QUEUE
 # =============================================================================
-# SQLite is built-in, but we add async support
-aiosqlite>=0.19.0
+schedule>=1.2.0
+celery>=5.3.0  # For distributed tasks (optional)
 
 # =============================================================================
 # VISUALIZATION
@@ -66,10 +73,11 @@ seaborn>=0.13.0
 plotly>=5.18.0
 
 # =============================================================================
-# API SERVER (Optional - for serving predictions)
+# API SERVER (Optional)
 # =============================================================================
 fastapi>=0.104.0
 uvicorn>=0.24.0
+pydantic>=2.5.0
 
 # =============================================================================
 # UTILITIES
@@ -88,10 +96,24 @@ pytrends>=4.9.0
 urllib3<2  # Compatibility fix for pytrends
 
 # =============================================================================
-# DEVELOPMENT & TESTING (Optional)
+# DEVELOPMENT & TESTING
 # =============================================================================
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
 black>=23.0.0
 isort>=5.12.0
 mypy>=1.6.0
+ruff>=0.1.0
+
+# =============================================================================
+# INSTALLATION INSTRUCTIONS
+# =============================================================================
+# pip install -r requirements.txt
+#
+# For GPU support (CUDA):
+# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
+#
+# API Keys needed:
+# - REDDIT_CLIENT_ID, REDDIT_CLIENT_SECRET (https://www.reddit.com/prefs/apps)
+# - UNSPLASH_API_KEY (https://unsplash.com/developers)
+# - PEXELS_API_KEY (https://www.pexels.com/api/)
